<resources>
    <string name="app_name">Chronos</string>
    <string name="title_union_preview">Распорядок</string>
    <string name="it_s_empty">Здесь пусто</string>
    <string name="action_type">Тип действия</string>
    <string name="goal">Цель</string>
    <string name="schedule">Расписание</string>
    <string name="edit">Изменить</string>
    <string name="add">Добавить</string>
    <string name="name">Название</string>
    <string name="color">Цвет</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="action_type_name_hint">Работа</string>
    <string name="select">Выбрать</string>
    <string name="cancel">Отменить</string>
    <string name="goal_name_hint">Мечта</string>
    <string name="note">Заметка</string>
    <string name="schedule_name_hint">Летнее</string>
    <string name="days">Дней</string>
    <string name="days_">Дней:</string>
    <string name="type_">Тип:</string>
    <string-array name="week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string name="start_">Начало:</string>
    <string name="end_">Конец:</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="duration">Длительность</string>
    <string name="start_after">Начать после</string>
    <string name="select_action_type">Выберите тип действия</string>
    <string name="day">День</string>
    <string name="day_">День:</string>
    <string name="text">Текст</string>
    <string name="time_">Время:</string>
    <string name="reminder">Напоминание</string>
    <string name="progress_">Прогресс:</string>
    <string name="periodic_schedule">Периодическое</string>
    <string name="once_schedule">На один день</string>
    <string name="all">Все</string>
    <string name="indefinitely">Бессрочно</string>
    <string name="deadline">Дедлайн</string>
    <string name="deadline_">Дедлайн:</string>
    <string name="main">Главная</string>
    <string name="time_tracker">Тайм трекер</string>
    <string name="folder_name_hint">Общее</string>
    <string name="folder">Папка</string>
    <string name="color_">Цвет:</string>
    <string name="error_name">Имя должно быть указано</string>
    <string name="time">Время</string>
    <string name="indefinite_goal">Бессрочная</string>
    <string name="temporary_schedule">Временная</string>
</resources>