<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/create_folder"
        android:title="@string/folder"/>

    <item
        android:id="@+id/create_note"
        android:title="@string/note"/>

    <item
        android:id="@+id/create_reminder"
        android:title="@string/reminder"/>

    <item
        android:id="@+id/create_goal"
        android:title="@string/goal" >
    </item>

    <item android:title="@string/schedule">
        <menu>
            <item
                android:id="@+id/create_periodic_schedule"
                android:title="@string/periodic_schedule"/>
            <item
                android:id="@+id/create_once_schedule"
                android:title="@string/once_schedule"/>
        </menu>
    </item>

    <item
        android:id="@+id/create_action_type"
        android:title="@string/action_type"/>
</menu>