<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="actionType"
            type="com.daiwerystudio.chronos.database.ActionType" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.actiontype.ActionTypeDialog">


        <TextView
            android:id="@+id/textView3"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/action_type_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/action_type_name" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/action_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="true"
            android:ems="5"
            android:hint="@string/action_type_name_hint"
            android:singleLine="true"
            android:text="@{actionType.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView6"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/color"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/action_type_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/action_type_color" />

        <ImageView
            android:id="@+id/action_type_color"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:colorFilter="@{actionType.color}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/action_type_name"
            app:layout_constraintTop_toBottomOf="@+id/action_type_name"
            app:srcCompat="@drawable/oval" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.BottomDialog.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_type_color" />

        <ImageView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/action_type_name"
            app:layout_constraintEnd_toEndOf="@+id/action_type_name"
            app:layout_constraintTop_toTopOf="@+id/action_type_name"
            app:srcCompat="@drawable/ic_baseline_error_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>