<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.reminder.ReminderDialog">

    <data>
        <variable
            name="reminder"
            type="com.daiwerystudio.chronos.database.Reminder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/day_"
            app:layout_constraintBottom_toBottomOf="@+id/day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/day" />

        <com.daiwerystudio.chronos.ui.widgets.TimeTextView
            android:id="@+id/day"
            style="@style/Text.Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textTime="@{reminder.time}"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/text"
            custom:timeLocal="local"
            custom:timeStyle="mediumFormat"
            custom:timeType="date"
            tools:text="8 августа" />

        <com.daiwerystudio.chronos.ui.widgets.TimeTextView
            android:id="@+id/time"
            style="@style/Text.Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textTime="@{reminder.time}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/day"
            custom:timeLocal="local"
            custom:timeStyle="shortFormat"
            custom:timeType="time"
            tools:text="0:10" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text"
            app:layout_constraintBottom_toBottomOf="@+id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="true"
            android:singleLine="true"
            android:text="@{reminder.text}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.BottomDialog.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day" />

        <ImageView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/text"
            app:layout_constraintEnd_toEndOf="@+id/text"
            app:layout_constraintTop_toTopOf="@+id/text"
            app:srcCompat="@drawable/ic_baseline_error_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/time_"
            app:layout_constraintBottom_toBottomOf="@+id/time"
            app:layout_constraintEnd_toStartOf="@+id/time"
            app:layout_constraintTop_toTopOf="@+id/time" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>